chat overflow bug-fix

--- a/templates-html/style.css
+++ b/templates-html/style.css
@@ -740,7 +740,7 @@ a{
 	width:calc(100% - 300px);
 	position: fixed;
 	bottom: 0px;
-	left:300px;
+	left:303px;
 	box-sizing: border-box;
 	padding:20px;
 	background-color: #f0f0f0;
